--- a/style.css
+++ b/style.css
@@ -1,53 +1,65 @@
 html {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  *, *:before,*:after {
-    box-sizing: inherit;
-  }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
-    background: #2C2141;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-
+  background: #2c2141;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .main {
-    background: #F8F8F8;
-    border-radius: 16px;
-    width: 624px;
-    margin: 16px;
-    padding: 32px;
+  background: #f8f8f8;
+  border-radius: 16px;
+  width: 624px;
+  margin: 16px;
+  padding: 32px;
 }
 
 .person {
-
 }
 
 .person__description {
-    font-size: 16px;
-    line-height: 22px;
+  font-size: 16px;
+  line-height: 22px;
+  margin: 0;
+}
+
+.person__description--width-margin {
+    margin-bottom: 22px;
+}
+
+.person__info {
+    margin-bottom: 24px;
+}
+.person__link {
+  color: #e20613;
+  text-decoration: none;
 }
 
 .person__name {
-    font-size: 36px;
-    margin: 0;
-    font-weight: normal;
+  font-size: 36px;
+  margin: 0;
+  font-weight: normal;
 }
 
 .person__position {
-    font-size: 18px;
-    color: #545454;
-    margin: 0;
-    font-style: italic;
+  font-size: 18px;
+  color: #545454;
+  margin: 0;
+  font-style: italic;
 }
 
 .special {
-    color: #ED6D05;
-    font-weight: normal;
-
+  color: #ed6d05;
+  font-weight: normal;
 }
