--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
 }
 
 .person {
+    display: flex;
+    align-items: flex-start;
 }
 
 .person__description {
@@ -52,6 +54,9 @@ body {
   font-weight: normal;
 }
 
+.person__picture {
+    margin-right: 32px;
+}
 .person__position {
   font-size: 18px;
   color: #545454;
